--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "covid19-react",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "chart.js": "^2.9.3",
+    "materialize-css": "^1.0.0-rc.2",
+    "moment": "^2.26.0",
+    "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-moment": "^0.9.7",
+    "react-scripts": "3.4.1",
+    "react-tabs": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,4 +41,5 @@
       "last 1 safari version"
     ]
   }
+
 }
